fixed jumbotron image alignment

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header {
 /*jumbotron*/
 .jumbotron {
     width: 100%;
-    height: 600px;
+    height: 580px;
     background-color: #b4d0e6;
 }
 
@@ -101,13 +101,13 @@ header {
 .jumbotron-left h2 {
     font-size: 15px;
     font-weight: 400;
-    padding-bottom: 35px;
+    padding-bottom: 30px;
 }
 
 .jumbotron-left h3 {
     font-size: 15px;
     font-weight: 400;
-    padding-bottom: 35px;
+    padding-bottom: 30px;
 }
 
 .jumbotron-left p {
@@ -119,7 +119,7 @@ header {
     width: 65%;
     height: 100%;
     display: flex;
-    align-items: end;
+    align-items: start;
 }
 
 .jumbotron-right img {
